[Liverpool] Fix header colour and logo on mobile version
I've had to include font-awesome for all sizes of the site, rather than
just the larger part because the logo for Liverpool's site is actually a
single character from a custom font.

https://github.com/mysociety/FixMyStreet-Commercial/issues/455

--- a/web/cobrands/liverpool/base.scss
+++ b/web/cobrands/liverpool/base.scss
@@ -9,10 +9,16 @@ $heading-font: 'Open Sans', sans-serif, Helvetica, Arial, sans-serif;
 
 @import "../sass/base";
 
+#site-header {
+    background: white;
+}
+
 // Disable the FMS logo for now.
 // TODO - see if this is still needed once the layout is sorted RE: Navigation position.
 #site-logo {
     background: none !important;
+    text-indent: 0;
+    font-size: 1.5em;
 }
 
 .liverpool-header, .liverpool-footer {
